Remove extra space around resolved variable values (#67)
* Remove extra space around resolved variable values

* better comment

* remove extra spaces in editor mode

--- a/elements/a2j-variable/a2j-variable.less
+++ b/elements/a2j-variable/a2j-variable.less
@@ -15,4 +15,16 @@ a2j-variable {
       visibility: hidden;
     }
   }
+
+    // this removes extra space around a2j-variable names in the editor
+    span.var-name { 
+      margin-right: -0.25em;
+      margin-left: -0.25em;
+    }
+
+  // this removes extra space around resolved a2j-variable names in documents
+    span.var-val { 
+      margin-right: -0.25em;
+      margin-left: -0.25em;
+    }
 }
